2006-12-30 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/spacs.h: deleted from svn

2006-12-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/gen.c (assignResultValue): fixed bug when registers overlap,
	  with this z80 passes printf float test when enabled
	* support/regression/tests/bug1057979.c: typo disabled ds390 float test

2006-12-28 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/config.in, support/cpp2/configure.in,
	  support/cpp2/configure, support/cpp2/Makefile.in:
	  fix for the solaris build

2006-12-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y (type_specifier2, pointer),
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (mergeSpec, checkSClass),
	* support/Util/SDCCerr.c,
	* support/Util/SDCCerr.h: Parse and validate the restrict keyword
	* support/valdiag/valdiag.py: Allow test cases to specify
	  required language standard
	* support/valdiag/tests/restrict.c: New file to test restrict keyword
	* support/valdiag/tests/tentdecl.c: Supress empty source file error

2006-12-27 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/cppmain.c, support/cpp2/mbchar.[ch]: removed
	* support/cpp2/libiberty/Makefile.in, support/cpp2/libiberty/sdcpp.dsp:
	  mbchar removed
	* support/cpp2/libiberty/getpwd.c, support/cpp2/sdcpp.h:
	  fixed for borland C
	* support/cpp2/libiberty/Makefile.bcc: updated
	* src/pic16/main.c: fixed #pragma udata handling
	* src/mcs51/mcs51.dsp: added peep.[ch] to the project

2006-12-26 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCpeeph.c: made labelHashEntry global,
	made pcDistance, FBYNAME static,
	(pcDistance): made static, use isComment and isLabel,
	(deadMove): added,
	(getLabelRef): added, extracted from labelRefCount(),
	(labelRefCount): use new getLabelRef(),
	(callFuncByName): made static, added deadMove,
	use isComment and isLabel,
	(newPeepRule): made static, set isLabel,
	(isLabelDefinition): added parameter isPeepRule to allow '%' in
	labels from peephole rules,