@@ -1,3 +1,8 @@
+2006-12-30 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>
+
+	* support/cpp2/options_vc_in.h, support/cpp2/options_vc_in.c,
+	  support/cpp2/sdcppa.dsp: create 'options.h' and 'options.c' under MSVC.
+
 2006-12-30 Borut Razem <borut.razem AT siol.net>
 
 	* support/cpp2/spacs.h: deleted from svn
